# frappe_postman_sync

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MAINTAINERS.md  README.md  SETUP_GUIDE.md  postman-sync  pyproject.toml
.github/: FUNDING.yml  SECURITY.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  linter.yml  release.yml
frappe_postman_sync/: __init__.py  cli.py  hooks.py  modules.txt  services.py  utils.py  whitelist_scanner.py
frappe_postman_sync/api/: __init__.py  help.py  permission.py  postman_sync.py
frappe_postman_sync/frappe_postman_sync/doctype/api_generator/: api_generator.js  api_generator.json  api_generator.py  test_api_generator.py
frappe_postman_sync/frappe_postman_sync/doctype/postman_setting/: postman_setting.js  postman_setting.json  postman_setting.py  test_postman_setting.py
scripts/: release.sh  setup.sh
